--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "animejs": "^3.1.0",
     "bower": "^1.8.8",
     "react": "^16.12.0",
+    "react-burger-menu": "^2.6.13",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
